my-apps/hello-world/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-world
  namespace: hello-world
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
      sectionName: https
  hostnames:
  - "hello-world.mvt.com.ar"
  rules:
  - matches:
    - path:
        type: PathPrefix 
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: hello-world
      port: 8080
      weight: 1
